
- #10584, #10856: Standard Library documentation build no longer fails if
  optional libraries have been disabled.
  (David Allsopp, report by Yuri Victorovich review by Florian Angeletti)

- #10593: Fix untyping of patterns without named existential quantifiers. This
  bug was only present in the beta version of OCaml 4.13.0.
  (Ulysse Gérard, review by Florian Angeletti)

OCaml 4.12, maintenance version
-------------------------------

### Bug fixes:

- #10442, #10446: Fix regression in the toplevel to #directory caused by
  corrections and improvements to the Load_path in #9611. #directory now
  adds the path to the start of the load path again (so files in the newly
  added directory take priority).
  (David Allsopp, report by Vasile Rotaru, review by Florian Angeletti
   and Nicolás Ojeda Bär)

- #10478: Fix segfault under Windows due to a mistaken initialization of thread
  ID when a thread starts.
  (David Allsopp, Nicolás Ojeda Bär, review by Xavier Leroy)

OCaml 4.12.0 (24 February 2021)
-------------------------------

### Supported platforms (highlights):

- #9699: add support for iOS and macOS on ARM 64 bits
  (Eduardo Rafael, review by Xavier Leroy, Nicolás Ojeda Bär
   and Anil Madhavapeddy, additional testing by Michael Schmidt)

### Standard library (highlights):

- #9797: Add Sys.mkdir and Sys.rmdir.
  (David Allsopp, review by Nicolás Ojeda Bär, Sébastien Hinderer and
   Xavier Leroy)

* #9765: add init functions to Bigarray.
  (Jeremy Yallop, review by Gabriel Scherer, Nicolás Ojeda Bär, and
   Xavier Leroy)

* #9668: List.equal, List.compare
  (This could break code using "open List" by shadowing
   Stdlib.{equal,compare}.)
  (Gabriel Scherer, review by Nicolás Ojeda Bär, Daniel Bünzli and Alain Frisch)

- #9066: a new Either module with
  type 'a Either.t = Left of 'a | Right of 'b
  (Gabriel Scherer, review by Daniel Bünzli, Thomas Refis, Jeremy Yallop)

- #9066: List.partition_map :